--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "leaderboard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./functions/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ."
+    "dev": "nodemon ./functions/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+    "netlify-cli": "^16.5.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
