--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./functions/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./functions/index.js"
+    "dev": "nodemon ./functions/index.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
