--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./functions/index.js",
-    "build": "npm i"
+    "start": "nodemon ./functions/index.js"
   },
   "keywords": [],
   "author": "",
